[#16346] Make all server tests run in CONTAINER mode
* Create dedicated container network and use that
* Extract certificate creation to independent CertificateAuthority class
* Remove EMBEDDED mode
* Remove all dependencies on infinispan-server-* artifacts
* Move NetworkAddress from server to commons
* Fix RESP CLUSTER SHARDS/SLOTS to work with INADDR_ANY
* REST NegotiateAuthenticator property to override hostname to match Kerberos SPN